--- a/src/pages/Home/Home/Banner.css
+++ b/src/pages/Home/Home/Banner.css
@@ -1,11 +1,14 @@
-.carousel-img :after {
-    content: '';
-    position: absolute;
-    left: 0; 
-    top: 0;
-    width: 100%; 
-    height: 100%;
-    display: inline-block;
-    border-radius: 13px;
-    background :linear-gradient(to right ,#151515 0%, rgba(220, 66, 37, 0.5) ,100% );
+.carousel-img:after {
+    content:'';
+    position:absolute;
+    left:0; 
+    top:0;
+    width:100%; 
+    height:100%;
+    border-radius: 12px;
+    display:inline-block;
+    background: linear-gradient(to right,  #151515 0%,rgba(21, 21, 21, 0) 100%);  
+ 
 }
+
+
